--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(token,fish)
 S3method(token,tiefighter)
 export(progress_bar_icon)
 export(token)
+importFrom(crayon,green)
+importFrom(progress,progress_bar)
 importFrom(stringr,"str_sub<-")
 importFrom(stringr,str_length)
 importFrom(stringr,str_sub)
